[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/EndCredits/EndCredits.gd" type="Script" id=1]
[ext_resource path="res://Font/NotoSans/Credits/NotoSansCreditsNormal.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/NotoSans/Credits/NotoSansCreditsBoldItalic.tres" type="DynamicFont" id=3]
[ext_resource path="res://Font/Hack/HackTitle.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/NotoSans/Credits/NotoSansCreditsItalic.tres" type="DynamicFont" id=5]
[ext_resource path="res://Font/NotoSans/Credits/NotoSansCreditsBold.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sound/Machine/BreakerSwitch.wav" type="AudioStream" id=7]

[node name="EndCredits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Advanced Invasion"
align = 1
valign = 1

[node name="LicenseLabel" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 1280.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "See the \"About\" section for full license details"
align = 1
valign = 1
autowrap = true

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 161.0
margin_right = 1280.0
margin_bottom = 185.0
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="FinishTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="MusicStartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartSoundAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -12.133
[connection signal="timeout" from="FinishTimer" to="." method="_on_FinishTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="MusicStartTimer" to="." method="_on_MusicStartTimer_timeout"]
